apps/test-gitops/manifests/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: test-gitops
spec:
  selector:
    app: pgadmin
  ports:
    - port: 80
      targetPort: 80
