apps/test-gitops/manifests/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: test-gitops
spec:
  ingressClassName: traefik
  rules:
    - host: pgadmin.192.168.1.132.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
